# MetaIMEServer

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  FanImeServer.props  README.md
assets/tables/: helpcode.txt  pinyin.txt
docs/: README-zh.md
html/default-themes/: horizontal_candidate_window_dark.html  horizontal_candidate_window_dark_normal.html  vertical_candidate_window_dark.html
html/default-themes/body/: vertical_candidate_window_dark.html
html/sciter/default-themes/: vertical_candidate_window_dark.html
html/webview2/default-themes/: vertical_candidate_window_dark.html
html/webview2/ftb/: default.html
html/webview2/menu/: default.html
html/webview2/settings/: default.html
includes/: main.h
scripts/: llaunch.ps1  lrun.ps1  lsign.ps1  prepare_env.py
scripts/config_files/: .clangd  CMakeLists.txt
scripts/config_files/tests/: CMakeLists.txt
src/: MainWindow.cpp  main.cpp
src/d2d/: candidate_window_d2d.cpp  candidate_window_d2d.h
src/defines/: base_structures.h  defines.h  globals.h
src/global/: globals.h
src/ime_engine/shuangpin/: dictionary.cpp  dictionary.h
src/ipc/: event_listener.cpp  event_listener.h  ipc.cpp  ipc.h
src/log/: fanylog.cpp  fanylog.h
src/sciter/: candidate_window_sciter.cpp  candidate_window_sciter.h
src/utils/: common_utils.cpp  common_utils.h  ime_utils.cpp  ime_utils.h  webview_utils.cpp  webview_utils.h  window_utils.cpp  window_utils.h
src/webview2/: MainWindow.cpp  candidate_window_webview2.cpp  candidate_window_webview2.h  windows_webview2.cpp  windows_webview2.h
src/window/: candidate_window.cpp  candidate_window.h  ime_windows.cpp  ime_windows.h  window_hook.cpp  window_hook.h
tests/: CMakeLists.txt
tests/scripts/: llaunch.ps1
tests/src/: main.cpp  test_shuangpin.cpp
